--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 osx_image: xcode8.3
 language: objective-c
-before_install: rvm use $RVM_RUBY_VERSION
-install: bundle install --without=documentation --path ../travis_bundle_dir
+xcode_project: ShareBudget.xcodeproj # path to your xcodeproj folder
+xcode_scheme: ShareBudgetTests
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)  -J 'ShareBudget'
+
+#before_install: rvm use $RVM_RUBY_VERSION
+#install: bundle install --without=documentation --path ../travis_bundle_dir
 
 script: xcodebuild test -project ShareBudget.xcodeproj -scheme ShareBudgetTests -destination 'platform=iOS Simulator,name=iPhone 6,OS=9.3' -sdk iphonesimulator GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES -enableCodeCoverage YES
 
 
-after_success:
-  - bash <(curl -s https://codecov.io/bash)  -J 'ShareBudget'
