--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ xcode_scheme: ShareBudgetTests
 before_install:
     - gem install cocoapods --no-rdoc --no-ri --no-document --quiet
 
+script:
+    - xcodebuild clean build -sdk iphonesimulator -workspace ShareBudget.xcworkspace -scheme ShareBudgetTests CODE_SIGNING_REQUIRED=NO GCC_GENERATE_TEST_COVERAGE_FILES=YES -enableCodeCoverage YES
+
 after_success:
   - bash <(curl -s https://codecov.io/bash)  -J 'ShareBudget'
 
