--- a/ShareBudget.xcodeproj/xcshareddata/xcschemes/ShareBudgetDevelopmentLocal.xcscheme
+++ b/ShareBudget.xcodeproj/xcshareddata/xcschemes/ShareBudgetDevelopmentLocal.xcscheme
@@ -10,13 +10,13 @@
             buildForTesting = "YES"
             buildForRunning = "YES"
             buildForProfiling = "YES"
-            buildForArchiving = "YES"
+            buildForArchiving = "NO"
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "573F599B1E295C4D00AEA72A"
-               BuildableName = "ShareBudget.app"
-               BlueprintName = "ShareBudget"
+               BlueprintIdentifier = "5735C3FC1EE445F40037BAA8"
+               BuildableName = "ShareBudgetDevelopmentLocal.app"
+               BlueprintName = "ShareBudgetDevelopmentLocal"
                ReferencedContainer = "container:ShareBudget.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -40,23 +40,13 @@
                ReferencedContainer = "container:ShareBudget.xcodeproj">
             </BuildableReference>
          </TestableReference>
-         <TestableReference
-            skipped = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "573F59BD1E295C4E00AEA72A"
-               BuildableName = "ShareBudgetUITests.xctest"
-               BlueprintName = "ShareBudgetUITests"
-               ReferencedContainer = "container:ShareBudget.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "573F599B1E295C4D00AEA72A"
-            BuildableName = "ShareBudget.app"
-            BlueprintName = "ShareBudget"
+            BlueprintIdentifier = "5735C3FC1EE445F40037BAA8"
+            BuildableName = "ShareBudgetDevelopmentLocal.app"
+            BlueprintName = "ShareBudgetDevelopmentLocal"
             ReferencedContainer = "container:ShareBudget.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -77,9 +67,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "573F599B1E295C4D00AEA72A"
-            BuildableName = "ShareBudget.app"
-            BlueprintName = "ShareBudget"
+            BlueprintIdentifier = "5735C3FC1EE445F40037BAA8"
+            BuildableName = "ShareBudgetDevelopmentLocal.app"
+            BlueprintName = "ShareBudgetDevelopmentLocal"
             ReferencedContainer = "container:ShareBudget.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -96,9 +86,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "573F599B1E295C4D00AEA72A"
-            BuildableName = "ShareBudget.app"
-            BlueprintName = "ShareBudget"
+            BlueprintIdentifier = "5735C3FC1EE445F40037BAA8"
+            BuildableName = "ShareBudgetDevelopmentLocal.app"
+            BlueprintName = "ShareBudgetDevelopmentLocal"
             ReferencedContainer = "container:ShareBudget.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
