--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,8 @@ language: objective-c
 before_install: rvm use $RVM_RUBY_VERSION
 install: bundle install --without=documentation --path ../travis_bundle_dir
 
-script: xcodebuild test -project ShareBudget.xcodeproj -scheme ShareBudgetTests -destination 'platform=iOS Simulator,name=iPhone 6,OS=9.3' -sdk iphonesimulator GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES -enableCodeCoverage YES
+script: xcodebuild test -project ShareBudget.xcodeproj -scheme ShareBudgetTests -sdk iphonesimulator GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES -enableCodeCoverage YES
 osx_image: xcode8.2
-# after_success: slather
 
-# language: objective-c
-# script: xcodebuild test -project Calculator.xcodeproj -scheme CalculatorTests -destination 'platform=iOS Simulator,name=iPhone 6,OS=9.3' -sdk iphonesimulator GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES -enableCodeCoverage YES
-# osx_image: xcode8.2
 after_success:
   - bash <(curl -s https://codecov.io/bash)  -J 'ShareBudget'
