--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
+osx_image: xcode8.3
 language: objective-c
 before_install: rvm use $RVM_RUBY_VERSION
 install: bundle install --without=documentation --path ../travis_bundle_dir
 
-script: xcodebuild test -project ShareBudget.xcodeproj -scheme ShareBudgetTests -sdk iphonesimulator GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES -enableCodeCoverage YES
-osx_image: xcode8.2
+script: 
+    - xcodebuild clean build -sdk iphonesimulator -workspace ShareBudget.xcworkspace -scheme ShareBudget CODE_SIGNING_REQUIRED=NO GCC_GENERATE_TEST_COVERAGE_FILES=YES -enableCodeCoverage YES
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)  -J 'ShareBudget'
