--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
-osx_image: xcode8.3
 language: objective-c
 before_install: rvm use $RVM_RUBY_VERSION
 install: bundle install --without=documentation --path ../travis_bundle_dir
 
-xcode_project: ShareBudget.xcodeproj # path to your xcodeproj folder
-xcode_scheme: ShareBudgetTests
+script: xcodebuild test -workspace ShareBudget.xcworkspace -scheme ShareBudget -sdk iphonesimulator GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES -enableCodeCoverage YES
+osx_image: xcode8.2
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)  -J 'ShareBudget'
