--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: objective-c
 before_install: rvm use $RVM_RUBY_VERSION
 install: bundle install --without=documentation --path ../travis_bundle_dir
 
-script: xcodebuild test -workspace ShareBudget.xcworkspace -scheme ShareBudget -sdk -destination 'platform=iOS Simulator,name=iPhone 6,OS=9.3' iphonesimulator GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES -enableCodeCoverage YES
+script: xcodebuild test -workspace ShareBudget.xcworkspace -scheme ShareBudget -sdk -destination "platform=iOS Simulator,name=iPhone 7" iphonesimulator GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES -enableCodeCoverage YES
 osx_image: xcode8.2
 
 after_success:
