--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,18 @@
-language: objective-c
-before_install: rvm use $RVM_RUBY_VERSION
-install: bundle install --without=documentation --path ../travis_bundle_dir
-
-script: xctool test -workspace ShareBudget.xcworkspace -scheme ShareBudget -sdk -destination 'platform=iOS Simulator,name=iPhone 6,OS=10.1' iphonesimulator GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES -enableCodeCoverage YES
 osx_image: xcode8.3
+language: objective-c
+xcode_project: ShareBudget.xcodeproj
+xcode_scheme: ShareBudget
+
+before_install:
+    - gem install cocoapods --no-rdoc --no-ri --no-document --quiet
+    
+env:
+    global:
+        - XTC_PATH=$HOME/xtc 
+        - PATH=$XTC_PATH:$PATH
+        
+script:
+    - ./travis-scripts/install_xtc.sh
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)  -J 'ShareBudget'
