--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ script:
     - xcodebuild test -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 5s,OS=latest' -workspace ShareBudget.xcworkspace -scheme ShareBudgetTests CODE_SIGNING_REQUIRED=NO GCC_GENERATE_TEST_COVERAGE_FILES=YES -enableCodeCoverage YES
 
 before_install:
+  - pod repo update
   - pod install
 
 after_success:
