--- a/ShareBudget.xcodeproj/xcshareddata/xcschemes/ShareBudgetDevelopmentLocal.xcscheme
+++ b/ShareBudget.xcodeproj/xcshareddata/xcschemes/ShareBudgetDevelopmentLocal.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "0830"
-   version = "1.8">
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -17,6 +17,20 @@
                BlueprintIdentifier = "5735C3FC1EE445F40037BAA8"
                BuildableName = "ShareBudgetDevelopmentLocal.app"
                BlueprintName = "ShareBudgetDevelopmentLocal"
+               ReferencedContainer = "container:ShareBudget.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "573F59BD1E295C4E00AEA72A"
+               BuildableName = "ShareBudgetUITests.xctest"
+               BlueprintName = "ShareBudgetUITests"
                ReferencedContainer = "container:ShareBudget.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -40,6 +54,16 @@
                ReferencedContainer = "container:ShareBudget.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "573F59BD1E295C4E00AEA72A"
+               BuildableName = "ShareBudgetUITests.xctest"
+               BlueprintName = "ShareBudgetUITests"
+               ReferencedContainer = "container:ShareBudget.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
@@ -57,6 +81,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
