--- a/ShareBudget.xcodeproj/xcshareddata/xcschemes/ShareBudget.xcscheme
+++ b/ShareBudget.xcodeproj/xcshareddata/xcschemes/ShareBudget.xcscheme
@@ -41,7 +41,7 @@
             </BuildableReference>
          </TestableReference>
          <TestableReference
-            skipped = "NO">
+            skipped = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "573F59BD1E295C4E00AEA72A"
