--- a/ShareBudget.xcodeproj/xcshareddata/xcschemes/ShareBudgetTests.xcscheme
+++ b/ShareBudget.xcodeproj/xcshareddata/xcschemes/ShareBudgetTests.xcscheme
@@ -64,6 +64,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "573F59B21E295C4E00AEA72A"
+            BuildableName = "ShareBudgetTests.xctest"
+            BlueprintName = "ShareBudgetTests"
+            ReferencedContainer = "container:ShareBudget.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
