--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -8,6 +8,7 @@ disabled_rules:
     - legacy_constructor
     - discarded_notification_center_observer
     - file_length
+    - identifier_name
     
 excluded:
     - R.generated.swift
