--- a/ShareBudget.xcodeproj/xcshareddata/xcschemes/ShareBudgetDebugProduction.xcscheme
+++ b/ShareBudget.xcodeproj/xcshareddata/xcschemes/ShareBudgetDebugProduction.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "5735C4671EE44D8F0037BAA8"
-               BuildableName = "ShareBudgetDevelopmentRemote.app"
-               BlueprintName = "ShareBudgetDevelopmentRemote"
+               BlueprintIdentifier = "573F599B1E295C4D00AEA72A"
+               BuildableName = "ShareBudget.app"
+               BlueprintName = "ShareBudget"
                ReferencedContainer = "container:ShareBudget.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -26,15 +26,26 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      codeCoverageEnabled = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "573F59B21E295C4E00AEA72A"
+               BuildableName = "ShareBudgetTests.xctest"
+               BlueprintName = "ShareBudgetTests"
+               ReferencedContainer = "container:ShareBudget.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "5735C4671EE44D8F0037BAA8"
-            BuildableName = "ShareBudgetDevelopmentRemote.app"
-            BlueprintName = "ShareBudgetDevelopmentRemote"
+            BlueprintIdentifier = "573F599B1E295C4D00AEA72A"
+            BuildableName = "ShareBudget.app"
+            BlueprintName = "ShareBudget"
             ReferencedContainer = "container:ShareBudget.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -42,7 +53,7 @@
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "ProductionDebug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -55,9 +66,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "5735C4671EE44D8F0037BAA8"
-            BuildableName = "ShareBudgetDevelopmentRemote.app"
-            BlueprintName = "ShareBudgetDevelopmentRemote"
+            BlueprintIdentifier = "573F599B1E295C4D00AEA72A"
+            BuildableName = "ShareBudget.app"
+            BlueprintName = "ShareBudget"
             ReferencedContainer = "container:ShareBudget.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -74,9 +85,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "5735C4671EE44D8F0037BAA8"
-            BuildableName = "ShareBudgetDevelopmentRemote.app"
-            BlueprintName = "ShareBudgetDevelopmentRemote"
+            BlueprintIdentifier = "573F599B1E295C4D00AEA72A"
+            BuildableName = "ShareBudget.app"
+            BlueprintName = "ShareBudget"
             ReferencedContainer = "container:ShareBudget.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
