--- a/ShareBudget.xcodeproj/xcshareddata/xcschemes/ShareBudgetDebugProduction.xcscheme
+++ b/ShareBudget.xcodeproj/xcshareddata/xcschemes/ShareBudgetDebugProduction.xcscheme
@@ -92,7 +92,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release"
+      buildConfiguration = "ProductionDebug"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
