--- a/ShareBudget/ShareBudget.entitlements
+++ b/ShareBudget/ShareBudget.entitlements
@@ -10,5 +10,9 @@
 	<array>
 		<string>applinks:sharebudget-development.herokuapp.com</string>
 	</array>
+	<key>com.apple.security.app-sandbox</key>
+	<true/>
+	<key>com.apple.security.network.client</key>
+	<true/>
 </dict>
 </plist>
